// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackLink should render a negative FeedbackLink 1`] = `
<withProps(Connect(Link))
  to={
    Object {
      "payload": Object {
        "city": "augsburg",
        "language": "de",
      },
      "query": Object {
        "feedback": "down",
      },
      "type": "CATEGORIES",
    }
  }
>
  <FontAwesome
    data-tip="negativeRating"
    name="frown-o"
  />
</withProps(Connect(Link))>
`;

exports[`FeedbackLink should render a positive FeedbackLink 1`] = `
<withProps(Connect(Link))
  to={
    Object {
      "payload": Object {
        "city": "augsburg",
        "language": "de",
      },
      "query": Object {
        "feedback": "up",
      },
      "type": "CATEGORIES",
    }
  }
>
  <FontAwesome
    data-tip="positiveRating"
    name="smile-o"
  />
</withProps(Connect(Link))>
`;
